Correcting some typos in report

--- a/Time Series Final Project.Rmd
+++ b/Time Series Final Project.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Time Series Final Project"
+title: "Time Series Analysis of Major League Baseball"
 author: "Danielle Sebring & Steven Barnett"
 date: "5/8/2022"
 output: pdf_document
@@ -21,7 +21,7 @@ yellow <- "#ff9800"
 
 ## Problem Statement
 
-Major League Baseball (MLB) has collected data on its players and their performances since 1871. This rich supply of data allows one to investigate and learn about trends in performance over time. Additionally, the game of baseball itself has evolved over the years. This is due to a variety of factors, ranging from the introduction of new technology to changes in the rules established by MLB. For example, the advent of sports analytics in the early 2000s has had an enormous impact on the game. Recently there has been increased concern that with player improvements, particularly in the area of pitcher arm strength and pitch speed. This has the potential to make the game of baseball less entertaining and therefore cause fans to lose interest. As a result, MLB is concerned about major revenue losses from a decrease in in-person game attendance as well TV viewership. Therefore, we are going to investigate some of these trends that lead to a less strategic, nuanced, and entertaining game of baseball. We will look at several statistics over the last century that are indicative of these trends, find the best models that fit these time series, and perform forecasting to reveal what the future of MLB holds considering the current direction.
+Major League Baseball (MLB) has collected data on its players and their performances since 1871. This rich supply of data allows one to investigate and learn about trends in performance over time. Additionally, the game of baseball itself has evolved over the years. This is due to a variety of factors, ranging from the introduction of new technology to changes in the rules established by MLB. For example, the advent of sports analytics in the early 2000s has had an enormous impact on the game. Recently there has been increased concern that with player improvements, particularly in the area of pitcher arm strength and pitch speed. This has the potential to make the game of baseball less entertaining and therefore cause fans to lose interest. As a result, MLB is concerned about major revenue losses from a decrease in in-person game attendance as well as TV viewership. Therefore, we are going to investigate some of these trends that lead to a less strategic, nuanced, and entertaining game of baseball. We will look at several statistics over the last century that are indicative of these trends, find the best models that fit these time series, and perform forecasting to reveal what the future of MLB holds considering the current direction.
 
 ## Data Collection
 
@@ -45,13 +45,11 @@ pitch_league <- pitching %>%
 
 Our data source is Lahman's Baseball Database. This database has batting, pitching, and fielding statistics dating back to 1871. Lahman's data allows for a high-level view of trends across the league, as well as potential for in-depth analysis down to an individual team-by-team or player-by-player level. We also referred to the Baseball Reference via Bill Petti's baseballr package, although there is restricted access to the database. Baseball Reference provided some insight on statistics of interest that were not readily available in Lahman's Baseball Database, but that could be calculated through simple data wrangling procedures.
 
-Initial data manipulation required aggregating the player level statistics to the league level. Some statistics present in the Baseball Reference database (e.g. batting average) were not present in Lahman's, so we had to do some calculations in order to maintain the consistency. 
-
 Our data has over 100 different statistics measured over the last century. An analysis of all of these would go beyond the scope of this project. Therefore, we identified six statistics that are indicative of the changes in baseball detrimental to the game's entertainment value: strikeouts, home runs, hits, wild pitches, batters hit by pitch, and sacrifices. Each of these has either increased or decreased over time due to the greater arm strength of pitchers and the resulting higher velocity of pitches. For example, as velocity of pitch has increased, the number of strikeouts naturally increases because batters have a harder time connecting with the ball. Additionally, home runs increase when pitch speed increases because the exit velocity of the ball from the bat is higher, making a home run more likely.
 
 Theses six statistics are all tracked by count (e.g. number of hits in the league per season). However, it is common in sports analytics to look at count variables as averages or rates. This practice reduces extreme values (e.g. the 2020 MLB season was shortened due to COVID-19, resulting in a drastic drop in all statistics) and produces more well-behaved residuals in model fitting. Therefore, for each of these six statistics, we calculate the "per nine innings" rate.
 
-We also found that data from the early years is highly variable. We attribute this to the rudimentary methods of data collection available in the late 1800s as well as the changes that often come as an organization begins. The National League of MLB officially began in 1876. Due to this early variability, we only consider the last 100 years (1922-2021). Therefore, after all data manipulation and cleanup, we begin our analysis with statistics for the years 1922-2021 listed in Table 1.
+We also found that data from the early years is highly variable. We attribute this to the rudimentary methods of data collection available in the late 1800s as well as the changes that often come as a sports organization forms and manages the development of its rules and procedures. The National League of MLB officially began in 1876. Due to this early variability, we only consider the last 100 years (1922-2021). Therefore, after all data manipulation and cleanup, we begin our analysis with statistics for the years 1922-2021 listed in Table 1.
 
 \begin{center}
 ```{r stats data table, echo = FALSE, message = FALSE, warning = FALSE}
@@ -222,7 +220,7 @@ axis(1, at = seq(1980, 2020, by = 20), tck = -0.02, las = 1, cex.axis = 1.05,
 mtext("Sacrifices", side = 2, line = 3.0)
 ```
 
-For the most part, it appears that the first-order differencing took out all the non-stationarity from these time series. There exists a hint of a positive trend or a prominent increase in variability as time goes on in the Hit By Pitch time series. Additionally, the Sacrifices time series appears to be trending downwards, but that could just be the final time point, which appears to be a negative outlier. 
+For the most part, it appears that the first-order differencing took out all the non-stationarity from these time series. There exists a hint of a positive trend or a prominent increase in variability as time goes on in the Hit By Pitch time series. Additionally, the Sacrifices time series appears to be trending downwards, but that could just be the final time point, which appears to be a negative outlier. However, we will proceed as if the first-order differencing is sufficient.
 
 ### Auto Regressive Integrated Moving Average Models 
 
@@ -311,7 +309,7 @@ mtext("PACF", side = 2, line = 2.5)
 mtext("Lag", side = 1, line = 2.0)
 ```
 
-As shown in Figure 3, for the most part we do not see any significant lags in the ACF or PACF for any of the differenced time series. In the Hits time series, it appears that the first lag is barely significant in ACF and the PACF. As such, we will consider an ARIMA model with auto regressive order of 0 and 1 and moving average order of 0 and 1. The Wild Pitches times series also has some interesting behavior. The first lag in the ACF is slightly significant, indicating that we should consider an auto regression coefficient of order 1. However, the most intriguing part is the significant lags of 16 and 18. This indicates that there may be some seasonality in this time series. Looking back at the original time series, we do see some cyclical pattern. It remains to be seen if that is of a regular nature or happens by random chance. 
+As shown in Figure 3, for the most part we do not see any significant lags in the ACF or PACF for any of the differenced time series. In the Hits time series, it appears that the first lag is barely significant in the ACF and the PACF. As such, we will consider an ARIMA model with an auto regressive order of 0 and 1 and a moving average order of 0 and 1. The Wild Pitches times series also has some interesting behavior. The first lag in the ACF is slightly significant, indicating that we should consider an auto regression coefficient of order 1. However, the most intriguing part is the significant lags of 16 and 18. This indicates that there may be some seasonality in this time series. Looking back at the original time series, we do see some cyclical pattern. It remains to be seen if that is of a regular nature or happens by random chance. 
 
 Now that we have some indication of what lags are significant in the models, we fit all combinations of possible order auto regressive, moving average, and differencing components. We calculate the Bayesian Information Criterion (BIC) for each as well as forecasting error for one, two and three step ahead forecasts. We use mean absolute error (MAE), mean squared error (MSE), and mean absolute percentage error (MAPE). Based on these different metrics, we select what we believe to be the best model between performance and simplicity. For brevity's sake, we will only display the output for the Strikeout time series.
 
@@ -383,7 +381,7 @@ kable(result_df, caption = "ARIMA models and their performance metrics for Strik
 
 It's clear from Table 2 that the best model for the Strikeout time series is an ARIMA(0, 1, 0). This is interesting, as it doesn't rely on any previous observations or averages once the first-order difference is calculated. Essentially, the differenced time series is a random walk based only on the error term in the model. 
 
-Although the best model for the strikeout time series was very clear, this is not the case with the other five time series. Decisions need to be made based on forecast performance and the likelihood of the model. We do not display all the metrics for all possible models. Instead, we display the metrics for our selected ARIMA models for each time series in Table 3.
+Although the best model for the strikeout time series was very clear, this is not the case with the other five time series. Decisions need to be made based on forecast performance and the likelihood of the model. We do not display all the metrics for all possible models to reduce output. Instead, we display the metrics for our selected ARIMA models for each time series in Table 3.
 
 ```{r arima_final_output, echo = FALSE, message = FALSE, warning = FALSE}
 results_mat <- matrix(data = c(c(-24.152, 0.181, 0.044, 0.024, 0.273, 0.108, 
@@ -410,7 +408,7 @@ kable(time_series_metrics_df, caption = "ARIMA models selected for each MLB time
 
 ### Dynamic Linear Models
 
-We next consider Dynamic Leader Models (DLMs). DLMs allow for better interpretation of parameters in the model than ARIMA models. We are particularly interested in this because our goal is to understand how the time series' we are investigating change over time. As we can see from the original plots of each time series, a clear trend exists in all of them. The trend seems fairly constant, so we believe a second-order polynomial DLM will be sufficient for most, if not all, of the six time series of interest. However, there could be some exceptions to this constant trend. For example, after the year 2010, the trend of the Strikeouts time series potentially increases up until 2021. Therefore, for a thorough analysis, we will consider first-order and third-order polynomial DLMs in addition to first-order polynomials. Once these DLMs are fit, we will select the best model for each time series based on BIC and one, two, and three step ahead forecast errors. We will also compare these metrics to the performance of the ARIMA models fit previously. 
+We next consider Dynamic Leader Models (DLMs). DLMs allow for better interpretation of parameters in the model than ARIMA models. We are particularly interested in this because our goal is to understand how the time series' we are investigating change over time. As we can see from the original plots of each time series, a clear trend exists in all of them. The trend seems fairly constant, so we believe a second-order polynomial DLM will be sufficient for most, if not all, of the six time series of interest. However, there could be some exceptions to this constant trend. For example, after the year 2010, the trend of the Strikeouts time series potentially increases up until 2021. Therefore, for a thorough analysis, we will consider first-order and third-order polynomial DLMs in addition to second-order polynomials. Once these DLMs are fit, we will select the best model for each time series based on BIC and one, two, and three step ahead forecast errors. We will also compare these metrics to the performance of the ARIMA models fit previously. 
 
 The results of three different polynomial order DLMs for each time series across ten metrics are listed below:
 
@@ -536,7 +534,7 @@ kable(table_results[[5]], caption = "Hit by Pitch") ## DLM(2)
 kable(table_results[[6]], caption = "Sacrifices") ## DLM(3)
 ```
 
-As shown in the Tables 4-9, there is no consistent pattern in which polynomial order model performs the best. It is consistent that the first-order polynomial DLM always has the lowest BIC value for each time series. This is due to the differences in likelihoods, but is exacerbated by the increased complexity from higher order polynomial models and the penalty BIC puts on more parameters. The model with the lowest BIC does not always perform the best in terms of forecast. In our selection of the best model, we put a premium on forecasting error. If there existed little to no difference in performance in forecasting, we fell back on BIC as a decision maker. With that said, we selected a second-order polynomial model from each time series other than Strikeouts and Sacrifices, each of which we picked a third-order polynomial model for.
+As shown in Tables 4-9, there is no consistent pattern in which polynomial order model performs the best. It is consistent that the first-order polynomial DLM always has the lowest BIC value for each time series. This is due to the differences in likelihoods and is exacerbated by the increased complexity from higher order polynomial models and the penalty BIC puts on more parameters. However, the model with the lowest BIC does not always perform the best in terms of forecast. In our selection of the best model, we put a premium on forecasting error. If there existed little to no difference in performance in forecasting, we fell back on BIC as a decision maker. With that said, we selected a second-order polynomial model for each time series other than Strikeouts and Sacrifices. For Strikeouts and Sacrifices, we we picked a third-order polynomial model.
 
 Once these were chosen, we compared the results to the ARIMA models chosen early to pick the best performing model for each time series. We originally thought that the DLM model would outperform the ARIMA model in all cases. When using BIC as a criterion, that is certainly true. But as stated previously, we put more emphasis on accuracy in forecasting. Therefore, for two of our time series we selected simple ARIMA models. Our selected models are listed below:
 
@@ -549,7 +547,7 @@ Once these were chosen, we compared the results to the ARIMA models chosen early
 
 ## Diagnostics
 
-Now that we have our selected models, we need to perform some diagnostics to ensure that the assumptions these models need are satisfied. First we plot the ACF and PACF of the residuals from each model. This gives us a sense if there exists any correlation between the observations. As seen in Figure 4, for the most part there are no significant lags in both the ACF and PACF of each time series. The only exception to this is the Wild Pitches time series. There appears to be significant lags of 15 and perhaps 17. This actually lines up with what we found earlier in our analysis, that there may be some cyclical or seasonal behavior. At this point we are satisfied with these results, but we'd like to investigate further in the future. 
+Now that we have our selected models, we need to perform some diagnostics to ensure that the assumptions these models need are satisfied. First we plot the ACF and PACF of the residuals from each model. This gives us a sense if there exists any correlation between the observations. As seen in Figure 4, for the most part there are no significant lags in both the ACF and PACF of each time series' residuals. The only exception to this is the Wild Pitches time series. There appears to be significant lags of 15 and perhaps 17. This actually lines up with what we found earlier in our analysis, that there may be some cyclical or seasonal behavior. At this point we are satisfied with these results, but we'd like to investigate further in the future. 
 
 ```{r diagnostics, fig.cap = "Diagnostic plots for correlation of residuals from fitted models", , echo = FALSE, message = FALSE, warning = FALSE}
 so_order3_fit <- dlmMLE(so_ts, rep(0, 4), build_third_order)
@@ -714,7 +712,7 @@ In Table 10 we list the results of formal tests for normality and independence o
 
 ## Forecasting
 
-Next we calculate the 20-year forecast for each of our time series. These forecasts are displayed alongside the time series in Figure 5. As we can see, the difference in the forecasts for the Dynamic Linear and ARIMA models is quite stark. Because the DLMs account for the trend in the time series, that trend is present in the forecast. However, the ARIMA models only project the most recent value. This is likely due to the fact that the models for Home Runs and Hit by Pitch are very simple. The Home Runs time series is modeled using an ARIMA(0, 1, 1). There is no autoregressive component. The Hit by Pitch time series is modeled using an ARIMA(0, 1, 0). There is only a first-order difference taken, and then the resulting time series is a random walk.
+Next we calculate the 20-year forecast for each of our time series. These forecasts are displayed alongside the time series in Figure 5. As we can see, the difference in the forecasts for the Dynamic Linear and ARIMA models is quite stark. Because the DLMs account for the trend in the time series, that trend is present in the forecast. However, the ARIMA models only project the most recent value. This is likely due to the fact that the models for Home Runs and Hit by Pitch are very simple. The Home Runs time series is modeled using an ARIMA(0, 1, 1). There is no autoregressive component. The Hit by Pitch time series is modeled using an ARIMA(0, 1, 0). There is only a first-order difference taken, and so the resulting time series is a random walk.
 
 We can see that the behavior of the confidence intervals of forecasts varies by time series. Some increase exponentially as time increases, such as Strikeouts and Sacrifices. However, the rest seem to be headed toward a constant interval after some time. We believe this is due to the magnitude of the trend in each time series. Strikouts are increasing at an increased rate, so the uncertainty is higher, whereas Wild Pitches has a much milder increase. Lastly, we see that Sacrifices are projected to go below zero. Obviously this does not make sense, so we should adjust our model to restrict the range of our response.
 
@@ -798,15 +796,16 @@ mtext("Sacrifices", side = 2, line = 2.25)
 ## Discussion
 
 It appears from our analysis that Major League Baseball has become less strategic over the years and more brute strength based. This is easy to see from the basic plot of each of these time series. Strikeouts, Home Runs, Wild Pitches, and Hit by Pitches (all per 9 innings) have increased over time. At the same time, Hits and Sacrifices (sacrifice hits & fly outs) (both per 9 innings) have decreased over the years. 
-Forecasting using the models we selected confirms the trend seen in the data. Forecasting indicates that Major League Baseball will continue to become less strategic over time and rely more and more on brute strength. In some instances, the the trends are forecast to continue at an alarming rate. For instance, about 8-9 strikeouts occur over a nine inning game. However, if the trend continues as it has, within 15-20 years, over half of the outs in an average baseball game will come from strikeouts.
 
-We strongly recommend that Major League Baseball investigate these changes and determine how to fix it. In fact, we know that Major League Baseball is already aware of this problem and are testing rule changes or game play procedures in order to address it. For instance, many rule changes are being introduced to Minor League Baseball as a testing ground to measure their effectiveness at resolving the issues. One rule change that has made it's way to MLB is that every team begins with a runner on second base in extra innings. This prevents games from stretching to abnormal lengths and boring fans. However, we don't believe this addresses the real problem. Many of the issues we see likely stem from increased arm strength and pitch velocity. As such, we recommend Major League baseball attempt to move the pitching mound further from home plate in order to give hitters more control and ability to bat strategically.
+Forecasting using the models we selected confirms the trend seen in the data. Forecasting indicates that Major League Baseball will continue to become less strategic over time and rely more and more on brute strength. In some instances, the trends are forecast to continue at an alarming rate. For instance, about 8-9 strikeouts currently occur over a nine inning game. However, if the trend continues as it has, within 15-20 years, over half of the outs in an average baseball game will come from strikeouts.
+
+We strongly recommend that Major League Baseball investigate these changes and determine how to fix it. In fact, we know that Major League Baseball is already aware of this problem and are testing rule changes or game play procedures in order to address it. For instance, many rule changes are being introduced to Minor League Baseball as a testing ground to measure their effectiveness at resolving the issues. One rule change that has made its way to MLB is that every team begins with a runner on second base in extra innings. This prevents games from stretching to abnormal lengths and boring fans. However, we don't believe this addresses the real problem. Many of the issues we see likely stem from increased arm strength and pitch velocity. As such, we recommend Major League baseball attempt to move the pitching mound further from home plate in order to give hitters more control and ability to bat strategically.
 
 Lastly, we believe that this analysis shows the usefulness of Dynamic Linear Models. The Hit by Pitch time series illustrates this. The best performing Auto Regressive Integrated Moving Average model was an ARIMA(0, 1, 0). All that was done was to compute a first-order difference that removed the non-stationarity from the time series. But no autoregressive or moving average coefficients were included. When we fit a DLM to the Hit by Pitch time series, the best performing model was a second-order polynomial model. A second-order polynomial DLM models the trend, and the level of the time series acts as a random walk. In fact, that is exactly what occurs in an ARIMA(0, 1, 0) model. Therefore, using a DLM in this case is incredibly helpful to understand the trend and how it varies, something that may be lost when restricted to an ARIMA model.
 
 ## Future Work
 
-This analysis is far from comprehensive and has only shown us how much more there can be done. As stated at the beginning of the report, this dataset contains over 100 statistics tracked over the last 150 years. This analysis only covers six of those. In the future we would like to investigate the following:
+This analysis is far from comprehensive and has only shown us how much more that can be done. As stated at the beginning of the report, this dataset contains over 100 statistics tracked over the last 150 years. This analysis only covers six of those. In the future we would like to investigate the following:
 
 * Slugging percentage and On-base percentage: these metrics track how often a player gets on base and puts weight on what type of hit it is (e.g. double, triple). The increase in popularity of data analytics has had a major effect on these statistics. Therefore, we'd like to see what change occurred and what the forecast for these statistics holds
 * Time-varying models: as we've seen, the trends of some of our statistics change throughout time. We've only scrateched the service of exploring time-varying components. We'd like to explore more sophisticated time-varying models that may fit our data better.
