--- a/Time Series Final Project.Rmd
+++ b/Time Series Final Project.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Time Series Analysis of Major League Baseball"
-author: "Danielle Sebring & Steven Barnett"
+author: "Steven Barnett & Danielle Sebring"
 date: "5/8/2022"
 output: pdf_document
 ---
@@ -27,9 +27,9 @@ Major League Baseball (MLB) has collected data on its players and their performa
 
 ```{r data, include = FALSE, message = FALSE, warning = FALSE}
 ## Danielle's Path
-#pitching <- read.csv("~/Spring 2022 5414/BaseballTimeSeries/Datasets/Pitching.csv")
+pitching <- read.csv("~/Spring 2022 5414/BaseballTimeSeries/Datasets/Pitching.csv")
 ## Steven's Path
-pitching <- read.csv("~/VTGraduateSchool/SPRING_2022/STAT_5414/Project/BaseballTimeSeries/Datasets/Pitching.csv")
+#pitching <- read.csv("~/VTGraduateSchool/SPRING_2022/STAT_5414/Project/BaseballTimeSeries/Datasets/Pitching.csv")
 
 ## Creating missing pitching variables and summarize league-wide statistics 
 ## of interset by year since 1922
@@ -43,13 +43,13 @@ pitch_league <- pitching %>%
   filter(yearID > 1921)
 ```
 
-Our data source is Lahman's Baseball Database. This database has batting, pitching, and fielding statistics dating back to 1871. Lahman's data allows for a high-level view of trends across the league, as well as potential for in-depth analysis down to an individual team-by-team or player-by-player level. We also referred to the Baseball Reference via Bill Petti's baseballr package, although there is restricted access to the database. Baseball Reference provided some insight on statistics of interest that were not readily available in Lahman's Baseball Database, but that could be calculated through simple data wrangling procedures.
+Our data source is Lahman's Baseball Database. This database has batting, pitching, and fielding statistics dating back to 1871. Lahman's data allows for a high-level view of trends across the league, as well as potential for in-depth analysis down to an individual team-by-team or player-by-player level. We also referred to the Baseball Reference via Bill Petti's baseballr package, although there is restricted access to the database. Baseball Reference provided some insight on statistics of interest that were not readily available in Lahman's Baseball Database, but those could be calculated through simple data wrangling procedures.
 
-Our data has over 100 different statistics measured over the last century. An analysis of all of these would go beyond the scope of this project. Therefore, we identified six statistics that are indicative of the changes in baseball detrimental to the game's entertainment value: strikeouts, home runs, hits, wild pitches, batters hit by pitch, and sacrifices. Each of these has either increased or decreased over time due to the greater arm strength of pitchers and the resulting higher velocity of pitches. For example, as velocity of pitch has increased, the number of strikeouts naturally increases because batters have a harder time connecting with the ball. Additionally, home runs increase when pitch speed increases because the exit velocity of the ball from the bat is higher, making a home run more likely.
+Our data has over 100 different statistics measured over the last century. An analysis of all of these would go beyond the scope of this project. Therefore, we identified six statistics that are indicative of the changes in baseball being detrimental to the game's entertainment value: strikeouts, home runs, hits, wild pitches, batters hit by pitch, and sacrifices. Each of these has either increased or decreased over time due to the greater arm strength of pitchers and the resulting higher velocity of pitches. For example, as velocity of pitch has increased, the number of strikeouts naturally increases because batters have a harder time connecting with the ball. Additionally, home runs increase when pitch speed increases because the exit velocity of the ball from the bat is higher, making a home run more likely.
 
-Theses six statistics are all tracked by count (e.g. number of hits in the league per season). However, it is common in sports analytics to look at count variables as averages or rates. This practice reduces extreme values (e.g. the 2020 MLB season was shortened due to COVID-19, resulting in a drastic drop in all statistics) and produces more well-behaved residuals in model fitting. Therefore, for each of these six statistics, we calculate the "per nine innings" rate.
+Theses six statistics are all tracked by count (e.g. number of hits in the league per season). However, it is common in sports analytics to instead look at count variables as averages or rates. This practice reduces extreme values (e.g. the 2020 MLB season was shortened due to COVID-19, resulting in a drastic drop in all statistics) and produces more well-behaved residuals in model fitting. Therefore, for each of these six statistics, we calculate the "per nine innings" rate.
 
-We also found that data from the early years is highly variable. We attribute this to the rudimentary methods of data collection available in the late 1800s as well as the changes that often come as a sports organization forms and manages the development of its rules and procedures. The National League of MLB officially began in 1876. Due to this early variability, we only consider the last 100 years (1922-2021). Therefore, after all data manipulation and cleanup, we begin our analysis with statistics for the years 1922-2021 listed in Table 1.
+The National League of MLB officially began in 1876. We found that data from the early years is highly variable. We attribute this to the rudimentary methods of data collection available in the late 1800s as well as the changes that often come as a sports organization forms and manages the development of its rules and procedures. Due to this early variability, we only consider the last 100 years (1922-2021). Therefore, after all data manipulation and cleanup, we begin our analysis with statistics for the years 1922-2021 listed in Table 1.
 
 \begin{center}
 ```{r stats data table, echo = FALSE, message = FALSE, warning = FALSE}
@@ -144,7 +144,7 @@ axis(1, at = seq(1980, 2020, by = 20), las = 1, cex.axis = 1.05,
 mtext("Sacrifices", side = 2, line = 2.25)
 ```
 
-Figure 1 displays the six time series of interest. It is clear at first glance that none of these are stationary time series. Therefore, in order to fit a model to these we will either have to consider a Dynamic Linear Model (DLM) or perform some sort of differencing in order to utilize an Auto Regressive or Moving Average model.
+Figure 1 displays the six time series of interest. It is clear at first glance that none of these are stationary time series. Therefore, in order to fit a model to these, we will either have to consider a Dynamic Linear Model (DLM) or perform some sort of differencing in order to utilize an Auto Regressive or Moving Average model.
 
 ### Differencing
 
@@ -239,6 +239,7 @@ pacf(diff_so_ts, xaxt = "n", yaxt = "n", ylab = "", xlab = "", lag = 20)
 axis(2, at = seq(-0.2, 0.2, by = 0.1), las = 1, hadj = 0.7, tck = -0.02)
 axis(1, at = seq(0, 20, by = 5), padj = -0.85, tck = -0.02)
 mtext("PACF", side = 2, line = 2.5)
+mtext("Lag", side = 1, line = 2.0)
 
 par(mar = c(2.0, 4.0, 2.0, 0.5))
 acf(diff_wp_ts, main = "", xaxt = "n", yaxt = "n", ylab = "", xlab = "", 
@@ -266,6 +267,7 @@ pacf(diff_hr_ts, xaxt = "n", yaxt = "n", ylab = "", xlab = "", lag = 20)
 axis(2, at = seq(-0.2, 0.2, by = 0.1), las = 1, hadj = 0.7, tck = -0.02)
 axis(1, at = seq(0, 20, by = 5), padj = -0.85, tck = -0.02)
 mtext("PACF", side = 2, line = 2.5)
+mtext("Lag", side = 1, line = 2.0)
 
 par(mar = c(2.0, 4.0, 2.0, 0.5))
 acf(diff_hbp_ts, main = "", xaxt = "n", yaxt = "n", ylab = "", xlab = "", 
@@ -293,6 +295,7 @@ pacf(diff_hit_ts, xaxt = "n", yaxt = "n", ylab = "", xlab = "", lag = 20)
 axis(2, at = seq(-0.2, 0.2, by = 0.1), las = 1, hadj = 0.7, tck = -0.02)
 axis(1, at = seq(0, 20, by = 5), padj = -0.85, tck = -0.02)
 mtext("PACF", side = 2, line = 2.5)
+mtext("Lag", side = 1, line = 2.0)
 
 par(mar = c(2.0, 4.0, 2.0, 0.5))
 acf(diff_sac_ts, main = "", xaxt = "n", yaxt = "n", ylab = "", xlab = "", 
@@ -534,7 +537,7 @@ kable(table_results[[5]], caption = "Hit by Pitch") ## DLM(2)
 kable(table_results[[6]], caption = "Sacrifices") ## DLM(3)
 ```
 
-As shown in Tables 4-9, there is no consistent pattern in which polynomial order model performs the best. It is consistent that the first-order polynomial DLM always has the lowest BIC value for each time series. This is due to the differences in likelihoods and is exacerbated by the increased complexity from higher order polynomial models and the penalty BIC puts on more parameters. However, the model with the lowest BIC does not always perform the best in terms of forecast. In our selection of the best model, we put a premium on forecasting error. If there existed little to no difference in performance in forecasting, we fell back on BIC as a decision maker. With that said, we selected a second-order polynomial model for each time series other than Strikeouts and Sacrifices. For Strikeouts and Sacrifices, we we picked a third-order polynomial model.
+As shown in Tables 4-9, there is no consistent pattern in which polynomial order model performs the best. It is consistent that the first-order polynomial DLM always has the lowest BIC value for each time series. This is due to the differences in likelihoods and is exacerbated by the increased complexity from higher order polynomial models and the penalty BIC puts on more parameters. However, the model with the lowest BIC does not always perform the best in terms of forecast. In our selection of the best model, we put a premium on forecasting error. If there existed little to no difference in performance in forecasting, we fell back on BIC as a decision maker. With that said, we selected a second-order polynomial model for Home Runs, Hits, Wild Pitches, and Hit by Pitch. For Strikeouts and Sacrifices, we we picked a third-order polynomial model.
 
 Once these were chosen, we compared the results to the ARIMA models chosen early to pick the best performing model for each time series. We originally thought that the DLM model would outperform the ARIMA model in all cases. When using BIC as a criterion, that is certainly true. But as stated previously, we put more emphasis on accuracy in forecasting. Therefore, for two of our time series we selected simple ARIMA models. Our selected models are listed below:
 
@@ -547,7 +550,7 @@ Once these were chosen, we compared the results to the ARIMA models chosen early
 
 ## Diagnostics
 
-Now that we have our selected models, we need to perform some diagnostics to ensure that the assumptions these models need are satisfied. First we plot the ACF and PACF of the residuals from each model. This gives us a sense if there exists any correlation between the observations. As seen in Figure 4, for the most part there are no significant lags in both the ACF and PACF of each time series' residuals. The only exception to this is the Wild Pitches time series. There appears to be significant lags of 15 and perhaps 17. This actually lines up with what we found earlier in our analysis, that there may be some cyclical or seasonal behavior. At this point we are satisfied with these results, but we'd like to investigate further in the future. 
+Now that we have our selected models, we need to perform some diagnostics to ensure that the assumptions of these models are satisfied. First we plot the ACF and PACF of the residuals from each model. This gives us a sense of if there exists any correlation between the observations. As seen in Figure 4, for the most part there are no significant lags in both the ACF and PACF of each time series' residuals. The only exception to this is the Wild Pitches time series. There appears to be significant lags of 15 and perhaps 17. This actually lines up with what we found earlier in our analysis, that there may be some cyclical or seasonal behavior. At this point we are satisfied with these results, but we'd like to investigate further in the future. 
 
 ```{r diagnostics, fig.cap = "Diagnostic plots for correlation of residuals from fitted models", , echo = FALSE, message = FALSE, warning = FALSE}
 so_order3_fit <- dlmMLE(so_ts, rep(0, 4), build_third_order)
@@ -708,13 +711,13 @@ kable(stats_p_vals_df,
       caption = "Results of diagnostics test for normality and independence of residuals")
 ```
 
-In Table 10 we list the results of formal tests for normality and independence of error. For the normality assumption, we employ the Shapiro-Wilk test. For the testing of correlation among the residuals, we use the Box-Ljung test. For the most part, we are unable to reject the null hypotheses of normality and independence. However, Wild Pitches rejects the null hypothesis, indicating that there exists some correlation among the residuals. This is expected as we saw this in the ACF and PACF. Surprisingly, we also see rejections of normality for the fitted model for Sacrifices and Hit by Pitch. For the Hit by Pitch time series, we employed an ARIMA model. In the future we may go back and use a DLM or other ARIMA model if it satisfies the assumptions better. For the Sacrifices time series, if we instead use a second-order polynomial DLM, the assumptions are satisfied. This will result in a drop in forecasting performance, but the assumptions will be satisfied.
+In Table 10 we list the results of formal tests for normality and independence of error. For the normality assumption, we employ the Shapiro-Wilk test. For the testing of correlation among the residuals, we use the Box-Ljung test. For the most part, we are unable to reject the null hypotheses of normality and independence. However, Wild Pitches rejects the null hypothesis, indicating that there exists some correlation among the residuals. This is expected as we saw this in the ACF and PACF. Surprisingly, we also see rejections of normality for the fitted model for Sacrifices and Hit by Pitch. For the Hit by Pitch time series, we employed an ARIMA model. In the future we may go back and use a DLM or a different ARIMA model if it satisfies the assumptions better. For the Sacrifices time series, if we instead use a second-order polynomial DLM, the assumptions are satisfied. This will result in a drop in forecasting performance, but the assumptions will be satisfied.
 
 ## Forecasting
 
 Next we calculate the 20-year forecast for each of our time series. These forecasts are displayed alongside the time series in Figure 5. As we can see, the difference in the forecasts for the Dynamic Linear and ARIMA models is quite stark. Because the DLMs account for the trend in the time series, that trend is present in the forecast. However, the ARIMA models only project the most recent value. This is likely due to the fact that the models for Home Runs and Hit by Pitch are very simple. The Home Runs time series is modeled using an ARIMA(0, 1, 1). There is no autoregressive component. The Hit by Pitch time series is modeled using an ARIMA(0, 1, 0). There is only a first-order difference taken, and so the resulting time series is a random walk.
 
-We can see that the behavior of the confidence intervals of forecasts varies by time series. Some increase exponentially as time increases, such as Strikeouts and Sacrifices. However, the rest seem to be headed toward a constant interval after some time. We believe this is due to the magnitude of the trend in each time series. Strikouts are increasing at an increased rate, so the uncertainty is higher, whereas Wild Pitches has a much milder increase. Lastly, we see that Sacrifices are projected to go below zero. Obviously this does not make sense, so we should adjust our model to restrict the range of our response.
+We can see that the behavior of the confidence intervals of forecasts varies by time series. Some increase exponentially as time increases, such as Strikeouts and Sacrifices. However, the rest seem to be headed toward a constant interval after some time. We believe this is due to the magnitude of the trend in each time series. Strikouts are increasing at a larger rate, so the uncertainty is higher, whereas Wild Pitches has a much milder increase. Lastly, we see that Sacrifices are projected to go below zero. Obviously this does not make sense, so we should adjust our model to restrict the range of our response in the future.
 
 ```{r forecasting_plots, fig.cap = "20-year forecasts for each MLB time series", echo = FALSE, message = FALSE, warning = FALSE}
 so_fore <- dlmForecast(so_order3_filt, n = 20)
@@ -795,23 +798,23 @@ mtext("Sacrifices", side = 2, line = 2.25)
 
 ## Discussion
 
-It appears from our analysis that Major League Baseball has become less strategic over the years and more brute strength based. This is easy to see from the basic plot of each of these time series. Strikeouts, Home Runs, Wild Pitches, and Hit by Pitches (all per 9 innings) have increased over time. At the same time, Hits and Sacrifices (sacrifice hits & fly outs) (both per 9 innings) have decreased over the years. 
+It appears from our analysis that Major League Baseball has become less strategic over the years and more brute strength based. This is easy to see from the basic plot of each of these time series. Strikeouts, Home Runs, Wild Pitches, and Hit by Pitch (all per nine innings) have increased over time. At the same time, Hits and Sacrifices (bunts & fly outs) (both per nine innings) have decreased over the years. 
 
-Forecasting using the models we selected confirms the trend seen in the data. Forecasting indicates that Major League Baseball will continue to become less strategic over time and rely more and more on brute strength. In some instances, the trends are forecast to continue at an alarming rate. For instance, about 8-9 strikeouts currently occur over a nine inning game. However, if the trend continues as it has, within 15-20 years, over half of the outs in an average baseball game will come from strikeouts.
+Forecasting using the models we selected confirms the trend seen in the data. Forecasting indicates that Major League Baseball will continue to become less strategic over time and rely more and more on brute strength. In some instances, the trends are forecasted to continue at an alarming rate. For instance, about 8-9 strikeouts currently occur over a nine inning game. However, if the trend continues as it has, within 15-20 years, almost one fifth of the outs in an average baseball game will come from strikeouts.
 
-We strongly recommend that Major League Baseball investigate these changes and determine how to fix it. In fact, we know that Major League Baseball is already aware of this problem and are testing rule changes or game play procedures in order to address it. For instance, many rule changes are being introduced to Minor League Baseball as a testing ground to measure their effectiveness at resolving the issues. One rule change that has made its way to MLB is that every team begins with a runner on second base in extra innings. This prevents games from stretching to abnormal lengths and boring fans. However, we don't believe this addresses the real problem. Many of the issues we see likely stem from increased arm strength and pitch velocity. As such, we recommend Major League baseball attempt to move the pitching mound further from home plate in order to give hitters more control and ability to bat strategically.
+We strongly recommend that Major League Baseball investigate these changes and determine how to correct them. In fact, we know that Major League Baseball is already aware of this problem and are testing out rule changes and different game play procedures in order to address it. For instance, many rule changes are being introduced to Minor League Baseball as a testing ground to measure their effectiveness at resolving the issues. One rule change that has made its way to MLB is that every team begins with a runner on second base in extra innings. This prevents games from stretching to abnormal lengths and boring fans. However, we don't believe this addresses the real problem. Many of the issues we see likely stem from increased arm strength and pitch velocity. As such, we recommend Major League baseball attempt to move the pitching mound further from home plate in order to give hitters more control and ability to bat strategically.
 
-Lastly, we believe that this analysis shows the usefulness of Dynamic Linear Models. The Hit by Pitch time series illustrates this. The best performing Auto Regressive Integrated Moving Average model was an ARIMA(0, 1, 0). All that was done was to compute a first-order difference that removed the non-stationarity from the time series. But no autoregressive or moving average coefficients were included. When we fit a DLM to the Hit by Pitch time series, the best performing model was a second-order polynomial model. A second-order polynomial DLM models the trend, and the level of the time series acts as a random walk. In fact, that is exactly what occurs in an ARIMA(0, 1, 0) model. Therefore, using a DLM in this case is incredibly helpful to understand the trend and how it varies, something that may be lost when restricted to an ARIMA model.
+Lastly, we believe that this analysis shows the usefulness of Dynamic Linear Models. The Hit by Pitch time series illustrates this. The best performing Auto Regressive Integrated Moving Average model was an ARIMA(0, 1, 0). All that was done was to compute a first-order difference that removed the non-stationarity from the time series, but no autoregressive or moving average coefficients were included. When we fit a Dynamic Linear Model to the Hit by Pitch time series, the best performing model was a second-order polynomial model. A second-order polynomial DLM models the trend while the level of the time series acts as a random walk. In fact, that is exactly what occurs in an ARIMA(0, 1, 0) model. Therefore, using a DLM in this case is incredibly helpful to understand the trend and how it varies, which is something that may be lost when restricted to an ARIMA model.
 
 ## Future Work
 
-This analysis is far from comprehensive and has only shown us how much more that can be done. As stated at the beginning of the report, this dataset contains over 100 statistics tracked over the last 150 years. This analysis only covers six of those. In the future we would like to investigate the following:
+This analysis is far from comprehensive and has only shown us how much more can be done. As stated at the beginning of the report, this dataset contains over 100 statistics tracked over the last 150 years. This analysis only covers six of those. In the future we would like to investigate the following:
 
 * Slugging percentage and On-base percentage: these metrics track how often a player gets on base and puts weight on what type of hit it is (e.g. double, triple). The increase in popularity of data analytics has had a major effect on these statistics. Therefore, we'd like to see what change occurred and what the forecast for these statistics holds
-* Time-varying models: as we've seen, the trends of some of our statistics change throughout time. We've only scrateched the service of exploring time-varying components. We'd like to explore more sophisticated time-varying models that may fit our data better.
-* Spatiotemporal models: all our analysis was of a temporal nature. We'd like to incorporate any spatial components into our models and projects. For instance, where the pitches predominiantly fall in the strike zone most likely has evolved over time. Additionally, where balls land after hits on the field has likely also changed. There is great potential for insight from this data on how the game has changed and how it will likely continue to change.
+* Time-varying models: as we've seen, the trends of some of our statistics change throughout time. We've only scrateched the surface of exploring time-varying components. We'd like to explore more sophisticated time-varying models that may fit our data better.
+* Spatiotemporal models: all of our analysis was of a temporal nature. We'd like to incorporate any spatial components into our models and projects. For instance, where the pitches predominiantly fall in the strike zone most likely has evolved over time. Additionally, where balls land on the field after hits has likely also changed. There is great potential for insight from this data on how the game has changed and how it will likely continue to change.
 * Wild Pitches: our analysis did not account for any cyclical or seasonal trend in any of our time series. We felt justified in this because of the lack of evidence and knowledge of the game. However, in the Wild Pitches time series, there appears to be some cyclical behavior. We'd like to explore that further.
-* Other variables: there are potential factors that influence a time series outside of the time series itself. We would like to consider other variables that may be helpful in model fit and lead to improved forecasting.
+* Other variables: there are potential factors that influence a time series outside of the time series itself, like historical or economic events. We would like to consider other variables that may be helpful in model fitting and lead to improved forecasting.
 
 ## References
 
